@@ -124,6 +124,7 @@ wxCheckBox *            O_WXEVTHANDLER
 wxChoice *              O_WXEVTHANDLER
 wxComboBox *            O_WXEVTHANDLER
 wxControlWithItems *    O_WXOBJECT
+wxEditableListBox *     O_WXOBJECT
 wxListBox *             O_WXEVTHANDLER
 wxStaticBox *           O_WXEVTHANDLER
 wxRadioButton *         O_WXEVTHANDLER
